[package]
name = "keygen"
version = "0.1.0"
edition = "2021"
authors = [ "myssynglynx" ]
description = "CLI Keygen Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = [ "derive" ] }
rand = "0.8.3"
rand_regex = "0.15.1"
rand_xorshift = "0.3.0"
regex = "1.7.1"
regex-syntax = "0.6.28"
